--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 # https://docs.gradle.org/current/userguide/build_environment.html#sec:gradle_configuration_properties
 kotlin.code.style=official
 # org.gradle.logging.level=(quiet,warn,lifecycle,info,debug)
-org.gradle.logging.level=debug
+org.gradle.logging.level=info
